--- a/index.html
+++ b/index.html
@@ -22,8 +22,110 @@
     <aside class="sidebar">
       <h2>Filters</h2>
       <form id="filters-form">
-        <!-- Stellar Class, Size, Color, Opacity, Stars Shown, Distance, and Connections fieldsets remain unchanged -->
-        <!-- … (unchanged fieldsets omitted for brevity) … -->
+        <!-- Stellar Class Filter Fieldset -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Stellar Class</legend>
+          <div class="filter-content">
+            <!-- This container must exist so that generateStellarClassFilters can set its innerHTML -->
+            <div id="stellar-class-container"></div>
+          </div>
+        </fieldset>
+
+        <!-- Size Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Size</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="size-stellar-class" name="size" value="stellar-class" checked />
+              <label for="size-stellar-class">Stellar Class-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="size-distance" name="size" value="distance" />
+              <label for="size-distance">Distance-Based</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Color Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Color</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="color-stellar-class" name="color" value="stellar-class" checked />
+              <label for="color-stellar-class">Stellar Class-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="color-constellation" name="color" value="constellation" />
+              <label for="color-constellation">Constellation</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="color-galactic-plane" name="color" value="galactic-plane" />
+              <label for="color-galactic-plane">Galactic Plane</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Opacity Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Opacity</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="opacity-absolute-mag" name="opacity" value="absolute-magnitude" checked />
+              <label for="opacity-absolute-mag">Absolute Magnitude-Based</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="opacity-75" name="opacity" value="75" />
+              <label for="opacity-75">75% Opacity</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Stars Shown Filter -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Stars Shown</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="radio" id="stars-shown-all" name="stars-shown" value="all" checked />
+              <label for="stars-shown-all">All Stars</label>
+            </div>
+            <div class="filter-item">
+              <input type="radio" id="stars-shown-visible" name="stars-shown" value="visible" />
+              <label for="stars-shown-visible">Visible Stars (Magnitude ≤ 6)</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Distance Filter Fieldset -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Distance Filter (LY)</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <label for="min-distance-slider">Minimum Distance:</label>
+              <input type="range" id="min-distance-slider" min="0" max="100" step="1" value="0" />
+              <input type="number" id="min-distance-number" name="min-distance" min="0" max="100" step="1" value="0" />
+            </div>
+            <div class="filter-item">
+              <label for="max-distance-slider">Maximum Distance:</label>
+              <input type="range" id="max-distance-slider" min="0" max="100" step="1" value="20" />
+              <input type="number" id="max-distance-number" name="max-distance" min="0" max="100" step="1" value="20" />
+            </div>
+          </div>
+        </fieldset>
+
+        <!-- Connections Filter (disabled by default) -->
+        <fieldset>
+          <legend class="collapsible" aria-expanded="false">Connections (LY)</legend>
+          <div class="filter-content">
+            <div class="filter-item">
+              <input type="checkbox" id="enable-connections" name="enable-connections" />
+              <label for="enable-connections">Enable Connections</label>
+            </div>
+            <div class="filter-item">
+              <input type="range" id="connection-slider" name="connections" min="1" max="50" step="1" value="7" disabled />
+              <span id="connection-value">7</span> Light Years
+            </div>
+          </div>
+        </fieldset>
 
         <!-- LOW DENSITY MAPPING Filter -->
         <fieldset>
@@ -80,7 +182,7 @@
       </form>
     </aside>
 
-    <!-- Maps Section remains unchanged -->
+    <!-- Maps Section -->
     <section class="maps-section">
       <div class="map-container">
         <h2>True Coordinates Map</h2>
@@ -95,7 +197,7 @@
     </section>
   </div>
 
-  <!-- Tooltip and Labels Container remain unchanged -->
+  <!-- Tooltip -->
   <div id="tooltip" class="hidden">
     <div id="tooltip-starName"></div>
     <div id="tooltip-systemName"></div>
@@ -105,20 +207,24 @@
     <div id="tooltip-apparentMag"></div>
     <div id="tooltip-absoluteMag"></div>
   </div>
+
+  <!-- Labels Container -->
   <div class="label-container"></div>
 
   <!-- Scripts -->
   <script type="module" src="script.js"></script>
   <script>
-    // Sidebar toggle
+    // Toggle sidebar menu
     document.getElementById('menu-toggle').addEventListener('click', function() {
       document.querySelector('.sidebar').classList.toggle('open');
     });
-    // Connection slider toggle
+
+    // Enable/disable connection slider
     document.getElementById('enable-connections').addEventListener('change', function() {
       document.getElementById('connection-slider').disabled = !this.checked;
     });
-    // Low density toggles
+
+    // Low density mapping toggles
     document.getElementById('enable-low-density-mapping').addEventListener('change', function() {
       const enabled = this.checked;
       document.getElementById('low-density-slider').disabled = !enabled;
@@ -127,20 +233,23 @@
       document.getElementById('low-density-grid-slider').disabled = !enabled;
       document.getElementById('low-density-grid-number').disabled = !enabled;
     });
-    // High density toggles
+
+    // High density mapping toggles
     document.getElementById('enable-high-density-mapping').addEventListener('change', function() {
       const enabled = this.checked;
       document.getElementById('high-octree-star-threshold').disabled = !enabled;
       document.getElementById('high-octree-max-depth').disabled = !enabled;
     });
-    // Update high density displayed values
+
+    // Update displayed values for high density sliders
     document.getElementById('high-octree-star-threshold').addEventListener('input', function() {
       document.getElementById('high-octree-star-threshold-value').textContent = this.value;
     });
     document.getElementById('high-octree-max-depth').addEventListener('input', function() {
       document.getElementById('high-octree-max-depth-value').textContent = this.value;
     });
-    // Sync min/max distance inputs
+
+    // Synchronize min/max distance inputs
     document.getElementById('min-distance-slider').addEventListener('input', function() {
       document.getElementById('min-distance-number').value = this.value;
     });
@@ -153,6 +262,7 @@
     document.getElementById('max-distance-number').addEventListener('input', function() {
       document.getElementById('max-distance-slider').value = this.value;
     });
+
     // Low density isolation slider sync
     document.getElementById('low-density-slider').addEventListener('input', function() {
       document.getElementById('low-density-number').value = this.value;
@@ -162,6 +272,7 @@
       document.getElementById('low-density-slider').value = this.value;
       document.getElementById('low-density-value').textContent = this.value;
     });
+
     // Low density grid size sync
     document.getElementById('low-density-grid-slider').addEventListener('input', function() {
       document.getElementById('low-density-grid-number').value = this.value;
@@ -169,10 +280,12 @@
     document.getElementById('low-density-grid-number').addEventListener('input', function() {
       document.getElementById('low-density-grid-slider').value = this.value;
     });
+
     // Connection slider sync
     document.getElementById('connection-slider').addEventListener('input', function() {
       document.getElementById('connection-value').textContent = this.value;
     });
+
     // Fullscreen button listeners
     document.querySelectorAll('.fullscreen-btn').forEach(btn => {
       btn.addEventListener('click', function() {
@@ -187,6 +300,7 @@
         }
       });
     });
+
     document.addEventListener("fullscreenchange", function() {
       if (!document.fullscreenElement) {
         document.querySelectorAll('.map-container canvas').forEach(canvas => {
